fixade z-index på adv search

--- a/src/assets/components/navBar/NavBar.css
+++ b/src/assets/components/navBar/NavBar.css
@@ -17,7 +17,7 @@ button {
   width: 100%;
   height: auto;
   margin: 0px;
-  z-index: 1; /*Så att navbaren inte hamnar bakom bild på receptkort när man scrollar ner*/
+  z-index: 2; /*Så att navbaren inte hamnar bakom bild på receptkort när man scrollar ner*/
 }
 
 .NavBar img {
